# Cache-System

./: .gitignore  CMakeLists.txt  README.md
docs/: design.md
include/: ICache.md  IEvictionPolicy.h  LRUCach.h  LRUCache.h  LRUPolicy.h
src/: LRUCache.cpp  LRUPolicy.cpp
tests/: tests_LRU.cpp
